# qurrium_pgp

./: Cargo.toml  README.md  pyproject.toml  tox.ini
.github/workflows/: CI.yml
qurrium_pqp/: __init__.py  bitwise.py  classical_shadow.py  dismatmul.py  dismatmul_rust.pyi  shadow_trace.py  shadow_trace_rust.pyi  utils.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: lib.rs
src/qurrium_pgp/: __init__.py  shadow_trace.py  shadow_trace_rust.pyi
