[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "qurrium_pgp"
description = "Qurrium Crossroads for Predicting Properties of Quantum Many-Body Systems - A Format Transformation Toolkit"
authors = [{ name = "Huai-Chung Chang", email = "harui2019@proton.me" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["qurrium>=0.12.0"]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "qurrium_pgp.shadow_trace_rust"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
