[package]
name = "shadow_trace_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shadow_trace_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
rayon = "1.11.0"
indicatif = {version ="0.17", features = ["rayon"]}
